--- a/DX9_2048_Project/DX9_2048_Project/DX9_2048_Project.vcxproj.filters
+++ b/DX9_2048_Project/DX9_2048_Project/DX9_2048_Project.vcxproj.filters
@@ -154,6 +154,9 @@
     <Text Include="v0.1.txt">
       <Filter>UpdateLog</Filter>
     </Text>
+    <Text Include="v0.2.txt">
+      <Filter>UpdateLog</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="MainShader.fx">
