--- a/DX9_2048_Project/DX9_2048_Project/DX9_2048_Project.vcxproj.filters
+++ b/DX9_2048_Project/DX9_2048_Project/DX9_2048_Project.vcxproj.filters
@@ -204,4 +204,9 @@
       <Filter>Image</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="v0.3.txt">
+      <Filter>UpdateLog</Filter>
+    </None>
+  </ItemGroup>
 </Project>
